<resources>
    <string name="app_name">SmartMenu</string>

    <!--Prompts and texts-->
    <string name="welcome_text">Welcome to customer. Please sign in before using customer.</string>
    <string name="welcome_text_on_login">You have successfully logged in as %1$s.</string>
    <string name="choose_prompt">Who are you today?</string>
    <string name="prompt_choose_location1">Click on the map to choose your location.</string>
    <string name="prompt_choose_location2">Click on the green button to confirm.</string>
    <string name="button_finish_delivery">Finish Delivery</string>
    <string name="button_pickup_delivery">Delivery Picked Up</string>
    <string name="button_cancel_delivery">Cancel Delivery</string>
    <string name="order_ordered_by">Ordered by: %1$s</string>
    <string name="order_delivered_by">Delivered by: %1$s</string>
    <string name="order_menuitem_list">Order Items:\n%1$s</string>
    <string name="order_price">Price: %1$s</string>

    <!--Toast messages-->
    <string name="err_firebase_unavailable">Unable to access Firebase. Please try again later.</string>
    <string name="err_user_failed_to_authenticate">customer is unable to authenticate you. Please sign-in again.</string>
    <string name="err_user_not_authenticated">You need to be signed-in to access this feature.</string>

    <string name="about_page_text">
        The SmartMenu for Restaurants will consist of the following features: \n
        Authentication\n
        Menu management\n
        Configure Bluetooth broadcast service\n
        Register deals\n
        Team:\n
        Jose Filho - 301005491 - jaraujo8@my.centennialcollege.ca\n
        Liam Salehi - 300906321 - hsalehi2@my.centennialcollege.ca\n
        Rodrigo Silva - 300993648 - rvieirad@my.centennialcollege.ca\n
        Thayllan Anacleto - 300973606 - tanaclet@my.centennialcollege.ca\n
        Oguz Bayral - 301029119 - obayral@my.centennialcollege.ca\n
    </string>
    <string name="default_web_client_id_google">484410979258-7ppcvjd498nk35h3hm87lb59220a129v.apps.googleusercontent.com</string>

    <string name="title_activity_login">Sign in</string>
    <string name="createAccount">Create account</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="google_sign_in_button_text">Sign In with Google</string>

    <bool name="is_restaurant_app">false</bool>

    <string name="login_or_password_invalid_message">Login or Password Invalid</string>
    <string name="restaurant_list_button_text">See Restaurants</string>
    <string name="restaurant_profile">Restaurant Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="customer_profile">My Profile</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="title_activity_customer_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_bluetooth">Bluetooth</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_default_restaurant_broadcast">10</string>
    <string name="pref_restaurant_broadcast_summary">Select the message capacity of the server</string>
    <string name="pref_restaurant_broadcast_title">AMOUNT OF BROADCASTED RESTAURANTS</string>
    <string name="pref_bluetooth_always_on_summary">Check if you always want your bluetooth to be on.</string>
    <string name="pref_bluetooth_always_on_title">Bluetooth Always On Configuration</string>
    <string name="title_activity_restaurant_settings">Settings</string>

</resources>
