<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="ca.mapd.capstone.smartmenu.restaurant.RestaurantSettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="ca.mapd.capstone.smartmenu.restaurant.RestaurantSettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="ca.mapd.capstone.smartmenu.restaurant.RestaurantSettingsActivity$RestaurantBluetoothPreferenceFragment"
        android:icon="@drawable/ic_bluetooth_black_24dp"
        android:title="@string/pref_header_bluetooth" />

</preference-headers>
