<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.mapd.capstone.smartmenu.customer.customer_activity.CustomerProfileActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/customer_profile"
        android:textSize="20sp"/>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/e_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblEmail"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:enabled="false"
            android:ems="10"
            android:id="@+id/txtEmail"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblName"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/txtName"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblAdress"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:text=""
            android:ems="10"
            android:id="@+id/txtAddress"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblPhoneNumber"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:text=""
            android:ems="10"
            android:id="@+id/txtPhoneNumber"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSaveCustomerProfile"/>
    </TableRow>
</TableLayout>